--- a/cloudfront/deploy.yml
+++ b/cloudfront/deploy.yml
@@ -28,7 +28,7 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: capstone-deploy
+      KeyName: devops
       ImageId: ami-07dd19a7900a1f049
       Tags:
         - Key: Name
