--- a/deployments/deployment.yml
+++ b/deployments/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: app
-        image: ahmedadell94/capstone:latest
+        image: kelanik8/capstone_project:latest
         resources:
           requests:
             cpu: 100m
